<resources>
    <string name="app_name">sistema_educativo_padres</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_tareas">Tareas</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_signout">Cerrar sesión</string>

    <string name="tab_title">Detalle Alumno</string>

    <string name="alumno_search">Buscar alumno...</string>
    <string name="alumno_name">Nombre del alumno</string>
    <string name="add_button">Agregar</string>

    <string name="register_user">Usuario (solo al registrar)</string>
    <string name="login_email">Correo Electrónico</string>
    <string name="login_password">Contraseña</string>
    <string name="login_button">Iniciar Sesión</string>
    <string name="register_button">Registrarse con correo</string>
    <string name="login_google_button">Iniciar Sesión con Google</string>

    <string name="tarea_title">Titulo de tarea</string>
    <string name="tarea_date">Fecha de entrega</string>
    <string name="tarea_course">Curso correspondiente</string>

    <string name="curso_title_detalle">Nombre del curso</string>
    <string name="curso_tarea_title_detalle">Titulo de la tarea</string>
    <string name="curso_tarea_date_detalle">Fecha de entrega de la tarea</string>
    <string name="curso_tarea_calificacion">Calificación</string>
    <string name="curso_avalar_btn">Avalar tarea</string>

    <string name="calificacion_format">Calificación: %.2f</string>

    <string name="api_key">978695257819-q5vj2ckko3mois6gfbjlaaqdrvtg5ghh.apps.googleusercontent.com</string>
</resources>