<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/secundaria"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/userText"
            style="@android:style/Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:autofillHints="emailAddress"
            android:hint="@string/register_user"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/emailText"
            style="@android:style/Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:autofillHints="emailAddress"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/passwordText"
            style="@android:style/Widget.TextView"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="15dp"
            android:autofillHints="password"
            android:hint="@string/login_password"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginButton"
            style="@style/Base.CardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_button" />

    </LinearLayout>

    <Button
        android:id="@+id/registerButton"
        style="@style/CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/register_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <Button
        android:id="@+id/loginButtonGoogle"
        style="@style/Base.CardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:drawableLeft="@drawable/ic_google_logo"
        android:drawablePadding="10dp"
        android:text="@string/login_google_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

</androidx.constraintlayout.widget.ConstraintLayout>