<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_tareas">

    <fragment
        android:id="@+id/nav_tareas"
        android:name="com.example.sistema_educativo_padres.ui.homework.TareasFragment"
        android:label="@string/menu_tareas"
        tools:layout="@layout/fragment_tareas">

        <action
            android:id="@+id/action_nav_tareas_to_nav_alumno_detalle_fragment"
            app:destination="@+id/nav_alumno_detalle_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sistema_educativo_padres.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_signout"
        android:name="com.example.sistema_educativo_padres.ui.signout.SignoutFragment"
        android:label="@string/menu_signout"
        tools:layout="@layout/fragment_signout" />

    <fragment
        android:id="@+id/nav_alumno_detalle_fragment"
        android:name="com.example.sistema_educativo_padres.ui.alumnos.AlumnoDetalleFragment"
        android:label="@string/tab_title"
        tools:layout="@layout/fragment_alumno_detalle">

        <argument
            android:name="alumnoId"
            app:argType="string" />

        <action
            android:id="@+id/action_nav_alumno_detalle_to_nav_tareas_detalles_fragment"
            app:destination="@+id/nav_tareas_detalles_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_pendientes_fragment"
        android:name="com.example.sistema_educativo_padres.ui.tareas.PendientesFragment"
        tools:layout="@layout/fragment_pendientes">

        <argument
            android:name="alumnoId"
            app:argType="string" />

        <action
            android:id="@+id/action_nav_pendientes_to_nav_tareas_detalles_fragment"
            app:destination="@+id/nav_tareas_detalles_fragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_tareas_detalles_fragment"
        android:name="com.example.sistema_educativo_padres.ui.tareas.TareasDetalleFragment"
        tools:layout="@layout/fragment_tareas_detalle">

        <argument
            android:name="titulo"
            app:argType="string" />

        <argument
            android:name="curso"
            app:argType="string" />

        <argument
            android:name="fechaEntrega"
            app:argType="string" />

        <argument
            android:name="calificacion"
            app:argType="float" />
    </fragment>
</navigation>